src/objects/Plan_of_Treatment__c.object
<CustomObject>
    <fields>
        <fullName>Center_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Plans of Treatment</relationshipLabel>
        <relationshipName>Plans_of_Treatment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cloned_Plan_of_Treatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link back to the plan of treatment this one was cloned from.  Not sure if we&apos;ll need this,  but I&apos;m storing it just in case.</description>
        <label>Cloned Plan of Treatment</label>
        <referenceTo>Plan_of_Treatment__c</referenceTo>
        <relationshipLabel>Plans of Treatment</relationshipLabel>
        <relationshipName>Cloned_Plan_of_Treatment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Display_Handout_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Handout Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Doctor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Doctor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Plans_of_Treatment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lower_Arch__c</fullName>
        <label>Lower Arch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Crystal Ultra</fullName>
                </value>
                <value>
                    <fullName>Denture</fullName>
                </value>
                <value>
                    <fullName>Implant Bridge</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Phased</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Zirconia</fullName>
                </value>
                <value>
                    <fullName>Arch Replacement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Doctor_Selection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Doctor Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Treatment_Description__c</fullName>
        <label>Treatment Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upper_Arch__c</fullName>
        <label>Upper Arch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Crystal Ultra</fullName>
                </value>
                <value>
                    <fullName>Denture</fullName>
                </value>
                <value>
                    <fullName>Implant Bridge</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Phased</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Zirconia</fullName>
                </value>
                <value>
                    <fullName>Arch Replacement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Plan of Treatment</label>
    <nameField>
        <label>Plan of Treatment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plans of Treatment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>